--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,4 @@ jobs:
 
       - name: Display dependencies
         run: mvn dependency:tree
+         working-directory: ./Implementation/Robotix
