--- a/Implémentation/Robotix/pom.xml
+++ b/Implémentation/Robotix/pom.xml
@@ -150,6 +150,10 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+            </plugin>
         </plugins>
     </build>
 </project>
